--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.12"
